--- a/css/common.css
+++ b/css/common.css
@@ -170,6 +170,7 @@
 }
 
 .dropdown .dd{
+  /* display: none; */
   width: 210px;
   height: 465px;
   margin-top: 2px;
@@ -213,4 +214,62 @@
   height: 45px;
   line-height: 45px;
   padding: 0 25px;
+}
+
+/*底部模块*/
+.footer{
+  height: 415px;
+  background-color: #f5f5f5;
+  padding-top: 30px;
+}
+.mod_service{
+  height: 80px;
+  border-bottom: 1px solid #ccc;
+}
+
+.mod_service ul li{
+  float: left;
+  width: 300px;
+  height: 50px;
+  /* background-color: skyblue; */
+  padding-left: 35px;
+}
+.mod_service ul li h5{
+  float: left;
+  height: 50px;
+  width: 50px;
+  /* border-radius: 50%; */
+  background-color: red;
+  margin-right: 8px;
+  background: url(../images/icons.png) no-repeat -252px -2px;
+}
+.service_txt h4{
+  font-size: 14px;
+}
+.service_txt p{
+  font-size: 12px;
+}
+.mod_help{
+  height: 185px;
+  border-bottom: 1px solid #ccc;
+  padding-top: 20px;
+  padding-left: 50px;
+}
+.mod_help dl {
+  float: left;
+  width: 200px;
+}
+.mod_help dl:last-child{
+  width: 90px;
+  text-align: center;
+}
+
+.mod_help dl dt {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.copyright{
+  margin-top: 20px;
+  text-align: center;
 }
